# ability_ability_lite

./: OAT.xml  README.md  README_zh.md  ability_lite.gni  bundle.json
frameworks/ability_lite/: BUILD.gn
frameworks/ability_lite/example/: BUILD.gn  README.md
frameworks/ability_lite/example/entry/src/main/cpp/: main_ability_slice.cpp  service_ability.cpp
frameworks/ability_lite/include/: ability_scheduler.h  ability_thread.h
frameworks/ability_lite/src/: ability.cpp  ability_event_handler.cpp  ability_loader.cpp  ability_main.cpp  ability_scheduler.cpp  ability_thread.cpp  ability_window.cpp
frameworks/ability_lite/src/slite/: ability_saved_data.cpp  lite_context.cpp  slite_ability.cpp
frameworks/ability_lite/unittest/: ability_main_test.cpp
frameworks/abilitymgr_lite/: BUILD.gn
frameworks/abilitymgr_lite/include/: ability_self_callback.h  ability_service_manager.h  abilityms_slite_client.h
frameworks/abilitymgr_lite/include/slite/: abilityms_slite_client.h
frameworks/abilitymgr_lite/src/: ability_kit.cpp  ability_manager.cpp  ability_self_callback.cpp  ability_service_manager.cpp  abilityms_client.cpp
frameworks/abilitymgr_lite/src/slite/: ability_manager.cpp  ability_manager_client.cpp  ability_manager_inner.cpp  ability_record_state_data.cpp  abilityms_slite_client.cpp  mission_info.cpp
frameworks/abilitymgr_lite/unittest/: ability_manager_inner_test.cpp
frameworks/want_lite/: BUILD.gn  README.md
frameworks/want_lite/include/: want_utils.h
frameworks/want_lite/src/: want.cpp
interfaces/inner_api/abilitymgr_lite/: ability_service_interface.h
interfaces/inner_api/abilitymgr_lite/slite/: ability_manager_client.h  ability_manager_inner.h  ability_record_observer.h  ability_record_state.h  ability_record_state_data.h  bms_helper.h  mission_info.h  slite_ability_loader.h
interfaces/innerkits/abilitymgr_lite/slite/: ability_manager_inner.h
interfaces/kits/ability_lite/: README.md  ability.h  ability_connection.h  ability_loader.h
interfaces/kits/ability_lite/slite/: ability_inner_message.h  ability_saved_data.h  lite_context.h  slite_ability.h  slite_ability_state.h
interfaces/kits/js/declaration/api/: @ohos.aafwk.d.ts
interfaces/kits/js/napi/: BUILD.gn  js_aafwk.cpp
interfaces/kits/want_lite/: want.h
services/abilitymgr_lite/: BUILD.gn  README.md
services/abilitymgr_lite/include/: ability_connect_record.h  ability_connect_trans_param.h  ability_inner_feature.h  ability_mgr_feature.h  ability_mgr_service.h  ability_mgr_slite_feature.h  ability_record.h  ability_record_manager.h  ability_service.h  ability_stack.h  ability_thread_loader.h  ability_worker.h  slite_ability_thread.h
services/abilitymgr_lite/include/client/: ability_dump_client.h  ability_thread_client.h
services/abilitymgr_lite/include/slite/: ability_inner_message.h  ability_list.h  ability_lock_guard.h  ability_mgr_service_slite.h  ability_record.h  ability_record_manager.h  ability_record_observer_manager.h  ability_stack.h  ability_thread.h  ability_thread_loader.h  bms_helper.h  dummy_js_ability.h  js_ability_thread.h  js_app_host.h  native_ability_thread.h  slite_ability_loader.h
services/abilitymgr_lite/include/util/: abilityms_helper.h  abilityms_log.h  abilityms_status.h
services/abilitymgr_lite/src/: ability_connect_mission.cpp  ability_inner_feature.cpp  ability_list.cpp  ability_mgr_feature.cpp  ability_mgr_handler.cpp  ability_mgr_service.cpp  ability_mgr_service_slite.cpp  ability_mgr_slite_feature.cpp  ability_mission_record.cpp  ability_mission_stack.cpp  ability_record.cpp  ability_record_manager.cpp  ability_service.cpp  ability_stack.cpp  ability_worker.cpp  app_record.cpp  page_ability_record.cpp
services/abilitymgr_lite/src/client/: ability_dump_client.cpp  ability_thread_client.cpp  app_spawn_client.cpp  wms_client.cpp
services/abilitymgr_lite/src/slite/: ability_list.cpp  ability_mgr_service_slite.cpp  ability_record.cpp  ability_record_manager.cpp  ability_record_observer_manager.cpp  ability_stack.cpp  ability_thread.cpp  ability_thread_loader.cpp  bms_helper.cpp  dummy_js_ability.cpp  js_ability_thread.cpp  js_app_host.cpp  native_ability_thread.cpp  slite_ability_loader.cpp
services/abilitymgr_lite/src/util/: abilityms_helper.cpp
services/abilitymgr_lite/tools/: BUILD.gn
services/abilitymgr_lite/tools/include/: ability_tool.h
services/abilitymgr_lite/tools/src/: ability_tool.cpp
services/abilitymgr_lite/unittest/test_lv0/page_ability_test/: BUILD.gn  page_ability_test.cpp
services/abilitymgr_lite/unittest/utils/: ability_test_helper.cpp  ability_test_helper.h
