# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
hilog_lite_path = "//base/hiviewdfx/hilog_lite"
permission_lite_path = "//base/security/permission_lite"
appapawn_lite_path = "//base/startup/appspawn/lite"
utils_lite_path = "//commonlibrary/utils_lite"

ability_lite_path = "//foundation/ability/ability_lite"
graphic_path = "//foundation/graphic"
arkui_path = "//foundation/arkui"
ace_engine_lite_path = "${arkui_path}/ace_engine_lite"
ability_lite_samgr_lite_path = "//foundation/systemabilitymgr/samgr_lite"
kv_store_path = "//foundation/distributeddatamgr/kv_store"
communication_path = "//foundation/communication"
dmsfwk_lite_path = "//foundation/ability/dmsfwk_lite"
