# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_lite/ability_lite.gni")
ohos_shared_library("aafwk") {
  include_dirs = [
    "//third_party/node/src",
    "${arkui_path}/napi/interfaces/kits",
  ]

  cflags = [
    "-fPIC",
    "-g3",
  ]

  sources = [ "js_aafwk.cpp" ]

  deps = [
    "${ability_lite_path}/frameworks/abilitymgr_lite:abilitymanager",
    "${arkui_path}/napi/:ace_napi",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"

  subsystem_name = "ability"
  part_name = "aafwk_native"
}
